add real content and link to cv

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             <h2>Jack of All Trades</h2>
             <p>I am a jack of all trades. Monarchist-Republican-Democrat-Capitalist-Socialist-Christian-Pro.ecumenism; Let me explain in a few words: 
 
-I am ruled by a king, Om. Solomon Gafabusa Iguru of Bunyoro (where i originate from) but also pay allegiance to the Kabaka of Buganda (where I live most of the time in the city, (hence Monarchist), my grandfather - Seezi Rugira was a County Chief and his brother - Samuel Byarufu was a County Chief too (monarchism flows in the veins too). 
+I am ruled by a king, Om. Solomon Gafabusa Iguru of Bunyoro (where I originate from) but also pay allegiance to the Kabaka of Buganda (where I live most of the time in the city, (hence Monarchist), my grandfather - Seezi Rugira was a County Chief and his brother - Samuel Byarufu was a County Chief too (monarchism flows in the veins too). 
 
 <br/><br/>
 I believe also in people determining their destiny as in being a republic, I don’t really like absolute monarchies (hence a Republican). 
 
-I believe in democracies, have no hope in dictators, even in my classes where I would be a small king, i ask my students to decide almost everything, i only dictate when they fail to agree (hence a true Democrat); 
+I believe in democracies, have no hope in dictators, even in my classes where I would be a small king, I ask my students to decide almost everything, I only dictate when they fail to agree (hence a true Democrat); 
 <br/><br/>
 
 I believe those who work harder should enjoy the benefits that come with it (some good degree of Capitalism), 
