adding some media and links

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </li>
 
         <li class="item item3">
-          <img src="http://source.unsplash.com/mWRR1xj95hg/480x320/">
+          <img src="/media/pic1.jpg">
           <div class="item-text">
             <h2>Jack of All Trades</h2>
             <p>I am a jack of all trades. Monarchist-Republican-Democrat-Capitalist-Socialist-Christian-Pro.ecumenism; Let me explain in a few words: 
@@ -90,10 +90,22 @@ I believe all world religions can converge, I have a problem with sects of Chris
 
         <li class="item item4">
           <div class="item-text">
-            <h2>For Details</h2>
-            <p>
-            For details, <a target="_blank" href="media/KUGONZA-CV.ROUGH.pdf">consult my CV here</a>
-            </p>
+            <h2>Important LINKS</h2>
+            <ul>
+
+                <li> <a target="_blank" href="https://twitter.com/DonaldKugonza">On Twitter</a> </li>
+                <li> Alt Email: <a target="_blank" href="mailto:rugira.kugonza@mak.ac.ug">rugira.kugonza@mak.ac.ug</a> 
+                                <a target="_blank" href="mailto:donkugonza@gmail.com">donkugonza@gmail.com</a> 
+                </li>
+                <li> <a target="_blank" href="https://www.linkedin.com/in/donald-rugira-kugonza-phd-msc-mba-a3abab3b/">LinkedIn</a> </li>
+                <li> <a target="_blank" href="https://scholar.google.com/citations?user=8yxmUV4AAAAJ&hl=en">Google Scholar</a> </li>
+                <li> <a target="_blank" href="https://www.facebook.com/donald.kugonza">Facebook</a> </li>
+                <li> Instagram <a target="_blank" href="#">@donkugonza</a> </li>
+                <li> <a target="_blank" href="https://www.researchgate.net/profile/Donald-Kugonza">ResearchGate</a> </li>
+                <li> <a target="_blank" href="https://independent.academia.edu/DonaldKugonza">Academia.edu</a> </li>
+                <li> <a target="_blank" href="https://orcid.org/0000-0002-4873-6637">ORCID</a> </li>
+
+            </ul>
           </div>
         </li>
 
@@ -213,7 +225,7 @@ Visiting Scientist, Iowa State University, College of Agric. and Life Sciences  
             <p>
             DONALD RUGIRA KUGONZA
             <br/>
-Associate Professor, 	Makerere University, Dept. of Agricultural Production	
+            Associate Professor, 	Makerere University, <br/>Dept. of Agricultural Production	
 <br/>
 <br/>
 
@@ -223,16 +235,17 @@ Associate Professor, 	Makerere University, Dept. of Agricultural Production
 <b>Tel:</b> 
 
 <br/>
-Department of Agricultural Production				(+256) 414-532-269
+Department of Agricultural Production				<br/>(+256) 414-532-269
 <br/>
-School of Agriculture Building					(+256) 782-874-551
+School of Agriculture Building					<br/>(+256) 782-874-551
 <br/>
-College of Agricultural and Environmental Sciences		(+256) 750-874-550
+College of Agricultural and Environmental Sciences		<br/>(+256) 750-874-550
 <br/>
 <br/>
 
 <b>Post Office:</b>
-Makerere University, P.O. Box 7062, Kampala, Uganda
+<br/>
+Makerere University, <br/>P.O. Box 7062, Kampala, Uganda
   
             </p>
           </div>
