--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta name="title" content="Assoc. Prof. Donald R. Kugonza">
+	<meta name="description" content="This is the official, personal website of Assoc. Prof. Donald R. Kugonza of Makerere University">
+	<meta name="keywords" content="AgricResearcher, RugiraKugonza, Genetics, Bees, Piggery">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="English">
+	<meta name="author" content="Nuchwezi Labs">
+
   <title>Assoc. Prof. Donald R. Kugonza</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
