add footer and fix top in small screens

--- a/index.html
+++ b/index.html
@@ -271,6 +271,12 @@ Makerere University, <br/>P.O. Box 7062, Kampala, Uganda
 
       </ul>
     </section>
+
+    <section>
+        <div class="footer">
+            Website Designed by <a href="https://nuchwezi.com" target="_blank">Nuchwezi Labs</a>
+        </div>
+    </section>
     
   </div>
     
