From Associate to Full Professor

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="title" content="Assoc. Prof. Donald R. Kugonza">
-	<meta name="description" content="This is the official, personal website of Assoc. Prof. Donald R. Kugonza of Makerere University">
+	<meta name="title" content="Prof. Donald R. Kugonza">
+	<meta name="description" content="This is the official, personal website of Prof. Donald R. Kugonza of Makerere University">
 	<meta name="keywords" content="AgricResearcher, RugiraKugonza, Genetics, Bees, Piggery">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="language" content="English">
 	<meta name="author" content="Nuchwezi Labs">
 
-  <title>Assoc. Prof. Donald R. Kugonza</title>
+  <title>Prof. Donald R. Kugonza</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -31,7 +31,7 @@
 
   <div class="container">
     <header>
-      <h1>Assoc. Prof. Donald Rugira-Kugonza <br/>(PhD, MSc, MBA) </h1>
+      <h1>Prof. Donald Rugira-Kugonza <br/>(PhD, MSc, MBA) </h1>
     </header>
     
     <section>
@@ -41,8 +41,8 @@
         <li class="item item1">
           <img src="https://i.postimg.cc/fyNFnG9K/The-project-PI-Assoc-Prof-Donald-Rugira-Kugonza-giving-the-project-overview-300x287.jpg">
           <div class="item-text">
-            <h2>Associate Professor</h2>
-            <p>I am a passionate animal scientist, currently an Associate Professor of animal agriculture, apiculture, animal breeding and genetics at Makerere University. I get a rush from helping others succeed, a process catalyst, a mountaineer, science mentor and a change agent. 
+            <h2>Professor</h2>
+            <p>I am a passionate animal scientist, currently a Professor of animal agriculture, apiculture, animal breeding and genetics at Makerere University. I get a rush from helping others succeed, a process catalyst, a mountaineer, science mentor and a change agent. 
             
 <br/><br/>
             Am highly motivated and result-driven, with 20 years of teaching, and collaborative research engagement (28 grants, 63 journal papers, 59 conference papers, 3 books, 185 collaborating scientists) focused on optimizing agricultural productivity through performance improvement of a wide array of several African Animal Genetic Resources.
@@ -237,7 +237,7 @@ Visiting Scientist, Iowa State University, College of Agric. and Life Sciences  
             <p>
             DONALD RUGIRA KUGONZA
             <br/>
-            Associate Professor, 	Makerere University, <br/>Dept. of Agricultural Production	
+            Professor, 	Makerere University, <br/>Dept. of Agricultural Production	
 <br/>
 <br/>
 
