Only HTTPS for links

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ I believe all world religions can converge, I have a problem with sects of Chris
         </li>
 
         <li class="item item1">
-          <img src="http://source.unsplash.com/B1amIgaNkwA/480x320/">
+          <img src="https://source.unsplash.com/B1amIgaNkwA/480x320/">
           <div class="item-text">
             <h2>5 Recent Grants</h2>
             <p>
@@ -159,7 +159,7 @@ European Union & Ministry of Science, Technology & Innovation - LEAP-AGRI-326 - 
         </li>
 
         <li class="item item2">
-          <img src="http://source.unsplash.com/xcC5ozHk_N8/480x320/">
+          <img src="https://source.unsplash.com/xcC5ozHk_N8/480x320/">
           <div class="item-text">
             <h2>5 Recent Publications</h2>
             <p>
@@ -186,7 +186,7 @@ Kugonza, D.R., Kayitesi, A., Nakkazi, C., Okot, M.W. and Mulindwa, H. Performanc
         </li>
 
         <li class="item item3">
-          <img src="http://source.unsplash.com/mWRR1xj95hg/480x320/">
+          <img src="https://source.unsplash.com/mWRR1xj95hg/480x320/">
           <div class="item-text">
             <h2>5 Recent Awards &amp; Recognition</h2>
             <p>
@@ -215,7 +215,7 @@ Visiting Scientist, Iowa State University, College of Agric. and Life Sciences  
         </li>
 
         <!-- li class="item item4">
-          <img src="http://source.unsplash.com/yEOCA6oiVqg/480x320/">
+          <img src="https://source.unsplash.com/yEOCA6oiVqg/480x320/">
           <div class="item-text">
             <h2>Item 4</h2>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed
@@ -231,7 +231,7 @@ Visiting Scientist, Iowa State University, College of Agric. and Life Sciences  
       <h2 class="section-header">Contacts</h2>
       <ul class="item-list">
         <li class="item item1">
-          <!-- img src="http://source.unsplash.com/B1amIgaNkwA/480x320/" -->
+          <!-- img src="https://source.unsplash.com/B1amIgaNkwA/480x320/" -->
           <div class="item-text">
             <h2>Makerere University</h2>
             <p>
@@ -264,7 +264,7 @@ Makerere University, <br/>P.O. Box 7062, Kampala, Uganda
         </li>
 
         <!-- li class="item item2">
-          <img src="http://source.unsplash.com/xcC5ozHk_N8/480x320/">
+          <img src="https://source.unsplash.com/xcC5ozHk_N8/480x320/">
           <div class="item-text">
             <h2>Item 2</h2>
             <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Donec sed odio dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
