--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ European Union & Ministry of Science, Technology & Innovation - LEAP-AGRI-326 - 
         </li>
 
         <li class="item item2">
-          <img src="https://source.unsplash.com/xcC5ozHk_N8/480x320/">
+          <!-- img src="https://source.unsplash.com/xcC5ozHk_N8/480x320/" -->
           <div class="item-text">
             <h2>5 Recent Publications</h2>
             <p>
@@ -186,7 +186,7 @@ Kugonza, D.R., Kayitesi, A., Nakkazi, C., Okot, M.W. and Mulindwa, H. Performanc
         </li>
 
         <li class="item item3">
-          <img src="https://source.unsplash.com/mWRR1xj95hg/480x320/">
+          <!-- img src="https://source.unsplash.com/mWRR1xj95hg/480x320/" -->
           <div class="item-text">
             <h2>5 Recent Awards &amp; Recognition</h2>
             <p>
