Fix unreachable image

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ I believe all world religions can converge, I have a problem with sects of Chris
         </li>
 
         <li class="item item1">
-          <img src="https://source.unsplash.com/B1amIgaNkwA/480x320/">
+          <!-- img src="https://source.unsplash.com/B1amIgaNkwA/480x320/" -->
           <div class="item-text">
             <h2>5 Recent Grants</h2>
             <p>
