--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ I believe all world religions can converge, I have a problem with sects of Chris
           </div>
         </li>
 
-        <li class="item item1">
+        <li class="item item5">
           <!-- img src="https://source.unsplash.com/B1amIgaNkwA/480x320/" -->
           <div class="item-text">
             <h2>5 Recent Grants</h2>
@@ -158,7 +158,7 @@ European Union & Ministry of Science, Technology & Innovation - LEAP-AGRI-326 - 
           </div>
         </li>
 
-        <li class="item item2">
+        <li class="item item6">
           <!-- img src="https://source.unsplash.com/xcC5ozHk_N8/480x320/" -->
           <div class="item-text">
             <h2>5 Recent Publications</h2>
@@ -185,7 +185,7 @@ Kugonza, D.R., Kayitesi, A., Nakkazi, C., Okot, M.W. and Mulindwa, H. Performanc
           </div>
         </li>
 
-        <li class="item item3">
+        <li class="item item7">
           <!-- img src="https://source.unsplash.com/mWRR1xj95hg/480x320/" -->
           <div class="item-text">
             <h2>5 Recent Awards &amp; Recognition</h2>
@@ -214,12 +214,25 @@ Visiting Scientist, Iowa State University, College of Agric. and Life Sciences  
           </div>
         </li>
 
+        <li class="item item8">
+          <div class="item-text">
+
+			<div id="dynamic_academia_portfolio">
+			  <div id='tag_cloud'></div>
+			  <center><p class="legend"><small> Click on an Article Tag in the animated tag cloud above to quickly jump to an article tagged #N@YEAR; meaning article #N published in year YEAR.</small></p></center>
+			  <hr/>
+			  <div id="orcid_results"></div>
+			</div>
+
+
+          </div>
+        </li>
+
+
         <!-- li class="item item4">
           <img src="https://source.unsplash.com/yEOCA6oiVqg/480x320/">
           <div class="item-text">
-            <h2>Item 4</h2>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed
-              consectetur. Donec sed odio dui.</p>
+
           </div>
         </li -->
 
@@ -285,6 +298,7 @@ Makerere University, <br/>P.O. Box 7062, Kampala, Uganda
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+  <script src='https://www.jqueryscript.net/demo/3D-Interactive-SVG-Tag-Cloud-Plugin-With-jQuery-SVG-3D-Tag-Cloud/jquery.svg3dtagcloud.min.js'></script><script  src="./script.js"></script>
   <script  src="./script.js"></script>
 
 </body>
