fix tag cloud display

--- a/index.html
+++ b/index.html
@@ -217,12 +217,14 @@ Visiting Scientist, Iowa State University, College of Agric. and Life Sciences  
         <li class="item item8">
           <div class="item-text">
 
-			<div id="dynamic_academia_portfolio">
-			  <div id='tag_cloud'></div>
-			  <center><p class="legend"><small> Click on an Article Tag in the animated tag cloud above to quickly jump to an article tagged #N@YEAR; meaning article #N published in year YEAR.</small></p></center>
-			  <hr/>
-			  <div id="orcid_results"></div>
-			</div>
+              <div id="dynamic_academia_portfolio">
+                  <center>
+                      <div id='tag_cloud'></div>
+                      <p class="legend"><small> Click on an Article Tag in the animated tag cloud above to quickly jump to an article tagged #N@YEAR; meaning article #N published in year YEAR.</small></p>
+                  </center>
+                  <hr />
+                  <div id="orcid_results"></div>
+              </div>
 
 
           </div>
