style tag cloud section better

--- a/index.html
+++ b/index.html
@@ -214,20 +214,23 @@ Visiting Scientist, Iowa State University, College of Agric. and Life Sciences  
           </div>
         </li>
 
+      
+
         <li class="item item8">
-          <div class="item-text">
+            <div class="item-text">
+                <h2>All Research via ORCID</h2>
 
-              <div id="dynamic_academia_portfolio">
-                  <center>
-                      <div id='tag_cloud'></div>
-                      <p class="legend"><small> Click on an Article Tag in the animated tag cloud above to quickly jump to an article tagged #N@YEAR; meaning article #N published in year YEAR.</small></p>
-                  </center>
-                  <hr />
-                  <div id="orcid_results"></div>
-              </div>
+                <div id="dynamic_academia_portfolio">
+                    <center>
+                        <div id='tag_cloud'></div>
+                        <p class="legend"><small> Click on an Article Tag in the animated tag cloud above to quickly jump to an article tagged #N@YEAR; meaning article #N published in year YEAR.</small></p>
+                    </center>
+                    <hr />
+                    <div id="orcid_results"></div>
+                </div>
 
 
-          </div>
+            </div>
         </li>
 
 
